# lazyclone

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  flake.nix  main.py  pyproject.toml
.github/workflows/: lint.yml  python-app.yml  python-publish.yml
lazyclone/: __init__.py
src/lazyclone/: __init__.py  clone.py  console.py  git.py  github.py  program.py  repository.py
tests/: test_integration_clone.py  test_repository_resolution.py
