[project]
name = "lazyclone"
version = "0.1.0"
description = "Git clone but easier"
readme = "README.md"
license = { file = 'LICENSE' }
authors = [{ name = 'Oli', email = 'oli@olillin.com' }]
maintainers = [{ name = 'Oli', email = 'oli@olillin.com' }]

requires-python = ">=3.13"
dependencies = [
 "inquirer>=3.4.1",
 "rich>=14.2.0",
]

[project.urls]
"Bug Reports" = "https://github.com/olillin/lazyclone/issues"
"Source" = "https://github.com/olillin/lazyclone"

[project.scripts]
lazyclone = 'lazyclone:main'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.envs.default]
installer = "uv"
